# YaPECS

./: .gitignore  README.md  pyproject.toml
yapecs/: __init__.py  _detail.py  component.py  processor.py  world.py
